canary/nginx-ingress/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  labels:
    app: my-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: my-app.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: my-app-v2
                port:
                  number: 80
